src/tests/snapshots/scl__tests__parse_expr@false_bool.scl.snap
---
source: src/tests/mod.rs
expression: expr
input_file: src/tests/sources/parse_expr/false_bool.scl
---
Expr {
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 5,
    },
    kind: Bool(
        false,
    ),
}
