src/tests/snapshots/scl__tests__parse_expr@number.scl.snap
---
source: src/tests/mod.rs
expression: expr
input_file: src/tests/sources/parse_expr/number.scl
---
Expr {
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 3,
    },
    kind: Number(
        "123",
    ),
}
