src/tests/snapshots/scl__tests__parse_expr@true_bool.scl.snap
---
source: src/tests/mod.rs
expression: expr
input_file: src/tests/sources/parse_expr/true_bool.scl
---
Expr {
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: 4,
    },
    kind: Bool(
        true,
    ),
}
